--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -14,8 +14,8 @@ name: "CodeQL"
 on:
   push:
     branches: [ "main" ]
-    paths:
-    - './src/**'
+    paths-ignore:
+    - './.github/**'
   pull_request:
     branches: [ "main" ]
   schedule:
