--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "module": "./dist/index.mjs",
     "types": "./dist/index.d.ts",
     "scripts": {
-        "build": "tsup"
+        "build": "npm test && npm run compile",
+        "test": "jest",
+        "compile": "tsup"
     },
     "repository": {
         "type": "git",
@@ -18,6 +20,9 @@
     "author": "padventures",
     "license": "MIT",
     "devDependencies": {
+        "@types/jest": "^29.5.12",
+        "jest": "^29.7.0",
+        "ts-jest": "^29.1.2",
         "tsup": "^8.0.2",
         "typescript": "^5.4.5"
     }
