--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
         "noImplicitAny": true,
         "esModuleInterop": true,
         "strictNullChecks": true,
+        "allowImportingTsExtensions": true,
         "target": "ES2022",
         "moduleResolution": "Node16",
         "module": "Node16",
