--- a/.npmignore
+++ b/.npmignore
@@ -1,8 +1,4 @@
-# Mac
-.DS_Store
-
-#NPM
-/node_modules
+#Bun
 bun.lockb
 
 # Package
@@ -10,3 +6,4 @@ bun.lockb
 tsconfig.json
 tsup.config.ts
 /tests
+jest.config.ts
