--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -15,7 +15,8 @@ on:
   push:
     branches: [ "main" ]
     paths-ignore:
-    - './.github/**'
+    - '.github/**'
+    - 'README.md'
   pull_request:
     branches: [ "main" ]
   schedule:
