--- a/package.json
+++ b/package.json
@@ -1,29 +1,28 @@
 {
-    "name": "padventures-utility",
-    "version": "0.0.1",
-    "description": "Small and reliable utility functions by @padventures",
-    "main": "./dist/index.js",
-    "module": "./dist/index.mjs",
-    "types": "./dist/index.d.ts",
-    "scripts": {
-        "build": "npm test && npm run compile",
-        "test": "jest",
-        "compile": "tsup"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/PAdventures/padventures-utility.git"
-    },
-    "keywords": [
-        "utility"
-    ],
-    "author": "padventures",
-    "license": "MIT",
-    "devDependencies": {
-        "@types/jest": "^29.5.12",
-        "jest": "^29.7.0",
-        "ts-jest": "^29.1.2",
-        "tsup": "^8.0.2",
-        "typescript": "^5.4.5"
-    }
+  "name": "padventures-utility",
+  "version": "0.0.1",
+  "description": "Small and reliable utility functions by @padventures",
+  "main": "./dist/index.js",
+  "module": "./dist/ems.mjs",
+  "types": "./dist/index.d.ts",
+  "scripts": {
+    "build": "npm test && npm run compile",
+    "test": "jest",
+    "compile": "tsc"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/PAdventures/padventures-utility.git"
+  },
+  "keywords": [
+    "utility"
+  ],
+  "author": "padventures",
+  "license": "MIT",
+  "devDependencies": {
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
+    "typescript": "^5.4.5"
+  }
 }
