--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,10 @@
 {
     "compilerOptions": {
-        "strict": true,
-        "noImplicitAny": true,
-        "esModuleInterop": true,
-        "strictNullChecks": true,
-        "allowImportingTsExtensions": true,
-        "target": "ES2022",
-        "moduleResolution": "Node16",
-        "module": "Node16",
-        "declaration": true,
-        "isolatedModules": true,
-        "noEmit": true,
-        "outDir": "dist"
-    },
-    "include": ["src"],
+		"declaration": true,
+		"outDir": "./dist",
+        "rootDir": "./src",
+        "allowJs": true
+	},
+    "include": ["./src/**/*"],
     "exclude": ["node_modules"]
 }
