--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,15 @@
 		"declaration": true,
 		"outDir": "./dist",
         "rootDir": "./src",
-        "allowJs": true
+        "allowJs": true,
+        "target": "ESNext",
+        "module": "NodeNext",
+        "moduleResolution": "NodeNext",
+        "esModuleInterop": true,
+        "forceConsistentCasingInFileNames": true,
+        "allowSyntheticDefaultImports": true,
+        "strict": true,
+        "declarationDir": "./dist/types",
 	},
     "include": ["./src/**/*"],
     "exclude": ["node_modules"]
