--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
         "allowSyntheticDefaultImports": true,
         "strict": true,
         "declarationDir": "./dist/types",
+        "noImplicitOverride": true
 	},
     "include": ["./src/**/*"],
     "exclude": ["node_modules"]
